--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/RegistroUsuario.cshtml
@@ -42,6 +42,7 @@
                             <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
                         </div>
                        <div class="col-xs-3">
+                           <label for="fechanac">Fecha de Nacimiento</label>
                         <label class="radio-inline"><input  required type="radio" name="sexo" value="M">Masculino</label>
                         <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
                         </div>
@@ -155,7 +156,7 @@
                         <input type="submit" class="btn btn-success" value="Registrar">
                         <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div>
-                    <input type="hidden" name="numfilas" id="numfilas"/>
+                    <input type="hidden" name="numfilas" id="numfilas" value="0"/>
                    
                 </fieldset>
             </form>
