--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/EditarUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/EditarUsuario.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Registro De Usuario</h1>
+            <h1 class="page-header">Editar Usuario</h1>
         </div>
 
         <div class="col-lg-12">
@@ -18,33 +18,33 @@
                             <h2 class="page-header">Datos Personales</h2>
                         </div>
                     </div>
-                    
+
                     <div class="form-group row">
                         <div class="col-xs-4">
-                            
+
                             <label for="nombre">Nombre</label>
-                            <input required id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus>
+                            <input required id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.nombre}">
                         </div>
                         <div class="col-xs-4">
                             <label for="apellido">Apellido</label>
-                            <input required id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus>
+                            <input required id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus vale="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.apellido}">
                         </div>
 
                         <div class="col-xs-4">
                             <label for="cedula">Cedula</label>
-                            <input required name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus/>
+                            <input required name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.cedula}"/>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-3">
                             <label for="fechanac">Fecha de Nacimiento</label>
-                            <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control">
+                            <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control" value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.fecha_nacimiento}">
                         </div>
-                       <div class="col-xs-3">
-                           <label for="fechanac">Fecha de Nacimiento</label>
-                        <label class="radio-inline"><input  required type="radio" name="sexo" value="M">Masculino</label>
-                        <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
+                        <div class="col-xs-3">
+                            <label for="fechanac">Sexo</label>
+                            <label class="radio-inline"><input required type="radio" name="sexo" value="M">Masculino</label>
+                            <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
                         </div>
                     </div>
 
@@ -57,14 +57,15 @@
                         <div class="col-xs-3">
                             <label for="sel1">Estado</label>
                             <select id="sel1" class="form-control" name="estado">
-                                @foreach (var dir in Model.direcciones) {
+                                @foreach (var dir in Model.direcciones)
+                                {
                                     <option>@dir.nombre</option>
                                 }
                             </select>
                         </div>
                         <div class="col-xs-3">
                             <label for="ciudad">Ciudad</label>
-                            <input required class="form-control" id="ciudad" name="ciudad" type="text" >
+                            <input required class="form-control" id="ciudad" name="ciudad" type="text">
                         </div>
                         <div class="col-xs-3">
                             <label for="calle">Calle</label>
@@ -75,26 +76,15 @@
                             <input required class="form-control" id="casa" name="casa" type="text">
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
                     <div class="form-group">
                         <label for="dir">Direccion</label>
-                        <textarea id="dir" class="form-control" name="direccion" col="5" rows="5"></textarea>
+                        <textarea id="dir" class="form-control" name="direccion" col="5" rows="5" value=""></textarea>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <label for="email">E-mail</label>
-                            <input required id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus>
+                            <input required id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus value="@if (Model.usuario != null) {@Model.usuario.email}">
                         </div>
                     </div>
 
@@ -102,14 +92,14 @@
                         <div class="col-xs-5">
                             <h2 class="page-header">Usuario</h2>
                             <label for="usuario">Usuario</label>
-                            <input required id="usuario" class="form-control" name="usuario" type="text" autofocus>
+                            <input required id="usuario" class="form-control" name="usuario" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.usuario}">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="col-xs-5">
                             <label for="psw">Clave</label>
-                            <input required id="clave" class="form-control" name="clave" type="password" autofocus>
+                            <input required id="clave" class="form-control" name="clave" type="password" autofocus value="@if (Model.usuario != null) {@Model.usuario.clave}">
                         </div>
                     </div>
 
@@ -126,18 +116,18 @@
                         </div>
                         <div class="col-xs-3">
                             <label required for="sueldo">Sueldo</label>
-                            <input type="text" id="sueldo" name="sueldo" class="form-control">
+                            <input type="text" id="sueldo" name="sueldo" class="form-control" value="@if (Model.usuario != null) {@Model.usuario.Empleado.sueldo}">
                         </div>
 
                     </div>
-                   <div class="row">
-                       <div class="col-xs-5">
-                           <h2 class="page-header"> Cargas</h2>
-                       </div>
-                   </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h2 class="page-header"> Cargas</h2>
+                        </div>
+                    </div>
                     <div class="col-lg-12">
-                       
-                        <button type="button" onclick="addTr()" class="btn btn-success boton-tabla" >Agregar</button>
+
+                        <button type="button" onclick="addTr()" class="btn btn-success boton-tabla">Agregar</button>
                         <table class="table table-striped table-bordered table-hover" id="tablaCargas">
                             <tr>
                                 <th>Nombre</th>
@@ -156,8 +146,8 @@
                         <input type="submit" class="btn btn-success" value="Registrar">
                         <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div>
-                    <input type="hidden" name="numfilas" id="numfilas" value="0"/>
-                   
+                    <input type="hidden" name="numfilas" id="numfilas" value="0" />
+
                 </fieldset>
             </form>
         </div>
