--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Home/Index.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Home/Index.cshtml
@@ -55,3 +55,6 @@
         </div>
     </div>
 </div>
+<div class="row" ng-controller="WelcomeCtrl">
+    <p ng-repeat="inte in intento">{{inte.nombre}}</p>
+</div>
