Servicios Angular y editar y eliminar usuario

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -299,7 +299,11 @@
     <script src="../Content/js/scripts/app.js"></script>
     <!--CONTROLLER-->
     <script src="../Content/js/scripts/controllers/welcome.js"></script>
+    <script src="../Content/js/scripts/controllers/usuario.js"></script>
     <!--SERVICES-->
+    <script src="../Content/js/scripts/services/usuario.js"></script>
+    <!--CONTANTS-->
+    <script src="../Content/js/scripts/constans/constants.js"></script>
     <!-- jQuery -->
     <script src="../Content/vendor/jquery/jquery.min.js"></script>
 
