--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -19,15 +19,15 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" ng-controller="usuarioCtrl">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
                 Usuarios Registrados
             </div>
             <!-- /.panel-heading -->
-            <center class="panel-body">
-                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+            <div class="panel-body">
+                <table width="" class="table table-striped table-bordered table-hover" id="dataTables-example">
                     <thead>
                         <tr>
                             <th>Código de empleado</th>
@@ -39,22 +39,19 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var user in Model.usuarios)
-                        {
-                            <tr class="odd gradeX">
-                                <td>@user.usuarioID</td>
-                                <td>@String.Concat(user.Empleado.Persona.nombre," "+user.Empleado.Persona.apellido)</td>
-                                <td>@user.Empleado.Persona.fecha_nacimiento</td>
-                                <td>@user.usuario</td>
-                                <td>@user.clave</td>
-                                <td>
-                                    <center>
-                                        <a href="/Configuration/EditarUsuario?usuario=@user.usuario" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
-                                        <a href="/Configuration/BorrarUsuario?usuario=@user.usuario" title="Eliminar" onclick="return confirm('Estas seguro de borrar el usuario?')" ><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true"></span></a>
-                                    </center>
-                                </td>
-                            </tr>
-                        }
+                        <tr class="odd gradeX" ng-repeat="usuario in usuarios">
+                            <td>{{usuario.Empleado.EmpleadoID}}</td>
+                            <td>{{usuario.Empleado.Persona.nombre +" "+usuario.Empleado.Persona.apellido}}</td>
+                            <td>{{usuario.Empleado.Persona.fecha_nacimiento | date}}</td>
+                            <td>{{usuario.usuario}}</td>
+                            <td>{{usuario.clave}}</td>
+                            <td>
+                                <center>
+                                    <a href="" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true" ng-click="editUsuario(usuario)"></span></a>
+                                    <a href="" title="Eliminar"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ng-click="deleteUsuario(usuario)"></span></a>
+                                </center>
+                            </td>
+                        </tr>
                         <tr class="odd gradeX">
                             <td>0001</td>
                             <td>José Rodríguez</td>
@@ -77,10 +74,11 @@
                     <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
                 </div>
                 -->
+            </div>
+            <!-- /.panel-body -->
         </div>
-        <!-- /.panel-body -->
+        <!-- /.panel -->
     </div>
-    <!-- /.panel -->
 </div>
 
 
