Realizando pagos, falta cargas y detalle

--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -300,8 +300,10 @@
     <!--CONTROLLER-->
     <script src="../Content/js/scripts/controllers/welcome.js"></script>
     <script src="../Content/js/scripts/controllers/usuario.js"></script>
+    <script src="../Content/js/scripts/controllers/nomina.js"></script>
     <!--SERVICES-->
     <script src="../Content/js/scripts/services/usuario.js"></script>
+    <script src="../Content/js/scripts/services/nomina.js"></script>
     <!--CONTANTS-->
     <script src="../Content/js/scripts/constans/constants.js"></script>
     <!-- jQuery -->
