--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/Variables.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/Variables.cshtml
@@ -13,7 +13,7 @@
                 <fieldset>
                     <div class="row">
                         <div class="col-lg-2">
-                            <h4>SSO</h4>
+                            <h4>SSO (%)</h4>
                         </div>
                         <div class="col-lg-offset-10">
                             <h6>Ultima Actualizacion: @if(Model.configuracion!=null){@Model.configuracion.fecha_inicio_config}</h6>
@@ -33,7 +33,7 @@
 
                     <div class="row">
                         <div class="col-lg-2">
-                            <h4>RPE</h4>
+                            <h4>RPE (%)</h4>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -50,7 +50,7 @@
 
                     <div class="row">
                         <div class="col-lg-2">
-                            <h4>FAOV</h4>
+                            <h4>FAOV (%)</h4>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -67,7 +67,7 @@
 
                     <div class="row">
                         <div class="col-lg-2">
-                            <h4>INCES</h4>
+                            <h4>INCES (%)</h4>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -85,7 +85,7 @@
 
                     <div class="row">
                         <div class="col-lg-2">
-                            <h4>Unidad Tributaria</h4>
+                            <h4>Unidad Tributaria (BsF.)</h4>
                         </div>
                     </div>
                     <div class="form-group row">
