--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -47,7 +47,7 @@
                             <td>{{usuario.clave}}</td>
                             <td>
                                 <center>
-                                    <a href="" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true" ng-click="editUsuario(usuario)"></span></a>
+                                    <a href="/Configuration/EditarUsuario/?usuario={{usuario.usuario}}" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
                                     <a href="" title="Eliminar"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ng-click="deleteUsuario(usuario)"></span></a>
                                 </center>
                             </td>
