--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/EditarUsuario.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/EditarUsuario.cshtml
@@ -12,143 +12,168 @@
 
         <div class="col-lg-12">
             <form role="form" action="/Configuration/RegistroUsuario" method="post">
-                <fieldset>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <h2 class="page-header">Datos Personales</h2>
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-xs-4">
-
-                            <label for="nombre">Nombre</label>
-                            <input required id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.nombre}">
-                        </div>
-                        <div class="col-xs-4">
-                            <label for="apellido">Apellido</label>
-                            <input required id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus vale="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.apellido}">
+                <div>
+                    <fieldset >
+                        <div class="row">
+                            <div class="col-xs-5">
+                                <h2 class="page-header">Datos Personales</h2>
+                            </div>
                         </div>
 
-                        <div class="col-xs-4">
-                            <label for="cedula">Cedula</label>
-                            <input required name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.cedula}"/>
-                        </div>
-                    </div>
+                        <div class="form-group row">
+                            <div class="col-xs-4">
 
-                    <div class="form-group row">
-                        <div class="col-xs-3">
-                            <label for="fechanac">Fecha de Nacimiento</label>
-                            <input required id="fechanac" name="fechanac" type="date" autofocus size="0" class="form-control" value="@if (Model.usuario != null) {@Model.usuario.Empleado.Persona.fecha_nacimiento}">
-                        </div>
-                        <div class="col-xs-3">
-                            <label for="fechanac">Sexo</label>
-                            <label class="radio-inline"><input required type="radio" name="sexo" value="M">Masculino</label>
-                            <label class="radio-inline"><input required type="radio" name="sexo" value="F">Femenino</label>
-                        </div>
-                    </div>
+                                <label for="nombre">Nombre</label>
+                                <input required id="nombre" class="form-control" placeholder="Nombres" name="nombre" type="text" autofocus value="@Model.usuario.Empleado.Persona.nombre">
+                            </div>
+                            <div class="col-xs-4">
+                                <label for="apellido">Apellido</label>
+                                <input required id="apellido" class="form-control" placeholder="Apellidos" name="apellido" type="text" autofocus value="@Model.usuario.Empleado.Persona.apellido">
+                            </div>
 
-
-
-
-
-
-                    <div class="form-group row">
-                        <div class="col-xs-3">
-                            <label for="sel1">Estado</label>
-                            <select id="sel1" class="form-control" name="estado">
-                                @foreach (var dir in Model.direcciones)
-                                {
-                                    <option>@dir.nombre</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="col-xs-3">
-                            <label for="ciudad">Ciudad</label>
-                            <input required class="form-control" id="ciudad" name="ciudad" type="text">
-                        </div>
-                        <div class="col-xs-3">
-                            <label for="calle">Calle</label>
-                            <input required class="form-control" id="calle" name="calle" type="text">
-                        </div>
-                        <div class="col-xs-3">
-                            <label for="casa">Casa/Apto</label>
-                            <input required class="form-control" id="casa" name="casa" type="text">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="dir">Direccion</label>
-                        <textarea id="dir" class="form-control" name="direccion" col="5" rows="5" value=""></textarea>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-xs-5">
-                            <label for="email">E-mail</label>
-                            <input required id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus value="@if (Model.usuario != null) {@Model.usuario.email}">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-xs-5">
-                            <h2 class="page-header">Usuario</h2>
-                            <label for="usuario">Usuario</label>
-                            <input required id="usuario" class="form-control" name="usuario" type="text" autofocus value="@if (Model.usuario != null) {@Model.usuario.usuario}">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-xs-5">
-                            <label for="psw">Clave</label>
-                            <input required id="clave" class="form-control" name="clave" type="password" autofocus value="@if (Model.usuario != null) {@Model.usuario.clave}">
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-xs-3">
-                            <label for="sel1">Cargo</label>
-                            <select id="sel1" class="form-control" name="cargo">
-                                @foreach (var car in Model.cargos)
-                                {
-                                    <option>@car.nombre</option>
-                                }
-
-                            </select>
-                        </div>
-                        <div class="col-xs-3">
-                            <label required for="sueldo">Sueldo</label>
-                            <input type="text" id="sueldo" name="sueldo" class="form-control" value="@if (Model.usuario != null) {@Model.usuario.Empleado.sueldo}">
+                            <div class="col-xs-4">
+                                <label for="cedula">Cedula</label>
+                                <input required name="cedula" class="form-control" placeholder="Ej:00000000" type="text" autofocus value="@Model.usuario.Empleado.Persona.cedula" />
+                            </div>
                         </div>
 
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <h2 class="page-header"> Cargas</h2>
+                        <div class="form-group row">
+                            <div class="col-xs-3">
+                                <label for="fechanac">Fecha de Nacimiento</label>
+                                <input required id="fechanac" name="fechanac" type="date" autofocus  class="form-control" value="@String.Format("{0:yyyy-MM-dd}",Model.usuario.Empleado.Persona.fecha_nacimiento)">
+                            </div>
+                            <div class="col-xs-3">
+                                <label for="fechanac">Sexo</label>
+                                <label class="radio-inline"><input required type="radio" name="sexo" value="M" >Masculino</label>
+                                <label class="radio-inline"><input required type="radio" name="sexo" value="F" >Femenino</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-12">
 
-                        <button type="button" onclick="addTr()" class="btn btn-success boton-tabla">Agregar</button>
-                        <table class="table table-striped table-bordered table-hover" id="tablaCargas">
-                            <tr>
-                                <th>Nombre</th>
-                                <th>Apellido</th>
-                                <th>C.I</th>
-                                <th>Sexo</th>
-                                <th>Fecha De Nacimiento</th>
-                                <th>Monto</th>
-                            </tr>
-                        </table>
-                    </div>
 
-                    <!-- Change this to a button or input when using this as a form -->
 
-                    <div class="col-lg-15">
-                        <input type="submit" class="btn btn-success" value="Registrar">
-                        <button type="reset" class="btn btn-danger">Cancelar</button>
-                    </div>
-                    <input type="hidden" name="numfilas" id="numfilas" value="0" />
 
-                </fieldset>
+
+
+                        <div class="form-group row">
+                            <div class="col-xs-3">
+                                <label for="sel1">Estado</label>
+                                <select id="sel1" class="form-control" name="estado">
+                                </select>
+                            </div>
+                            <div class="col-xs-3">
+                                <label for="ciudad">Ciudad</label>
+                                <input required class="form-control" id="ciudad" name="ciudad" type="text">
+                            </div>
+                            <div class="col-xs-3">
+                                <label for="calle">Calle</label>
+                                <input required class="form-control" id="calle" name="calle" type="text">
+                            </div>
+                            <div class="col-xs-3">
+                                <label for="casa">Casa/Apto</label>
+                                <input required class="form-control" id="casa" name="casa" type="text">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="dir">Direccion</label>
+                            <textarea id="dir" class="form-control" name="direccion" col="5" rows="5" value=""></textarea>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-xs-5">
+                                <label for="email">E-mail</label>
+                                <input required id="email" class="form-control" placeholder="ejemplo@dvc.com" name="email" type="email" autofocus value="@Model.usuario.email">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-xs-5">
+                                <h2 class="page-header">Usuario</h2>
+                                <label for="usuario">Usuario</label>
+                                <input required id="usuario" class="form-control" name="usuario" type="text" autofocus value="@Model.usuario.usuario">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-xs-5">
+                                <label for="psw">Clave</label>
+                                <input required id="clave" class="form-control" name="clave" type="password" autofocus value="@Model.usuario.clave">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-xs-3">
+                                <label for="sel1">Cargo</label>
+                                <select id="sel1" class="form-control" name="cargo" value="@Model.usuario.Empleado.Cargo.nombre">
+                                  @foreach (var car in Model.cargos)
+                                  {
+                                    if (Model.usuario.Empleado.Cargo.nombre == car.nombre)
+                                    {
+
+                                        <option selected>@car.nombre</option>
+                                      }
+                                      else
+                                      {
+                                          <option>@car.nombre</option>
+                                      }
+
+                                  }
+
+                                </select>
+                            </div>
+                            <div class="col-xs-3">
+                                <label required for="sueldo">Sueldo</label>
+                                <input type="text" id="sueldo" name="sueldo" class="form-control" value="@Model.usuario.Empleado.sueldo">
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-5">
+                                <h2 class="page-header"> Cargas</h2>
+                                
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+
+                            <button type="button" onclick="addTr()" class="btn btn-success boton-tabla">Agregar</button>
+                            <table class="table table-striped table-bordered table-hover" id="tablaCargas">
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Apellido</th>
+                                    <th>C.I</th>
+                                    <th>Sexo</th>
+                                    <th>Fecha De Nacimiento</th>
+                                    <th>Monto</th>
+                                </tr>
+                                
+                                    @foreach (var carga in Model.usuario.Empleado.Cargas)
+                                    {
+                                        <tr>
+                                            
+                                            <td><input required class="form-control" type="text" placeholder="Nombre" name="nombrecarga" value="@carga.Persona.nombre"></td>
+                                            <td><input required class="form-control" type="text" placeholder="Apellido" name="apellidocarga" value="@carga.Persona.apellido"></td>
+                                            <td><input required class="form-control" type="text" placeholder="Cedula" name="cedulacarga" value="@carga.Persona.cedula"></td>
+                                            <td><select required class="form-control" name="sexocarga"><option value="M">Masculino</option><option value="F">Femenino</option></select></td>
+                                            <td><input required class="form-control" type="date" name="fechanaccarga" value="@String.Format("{0:yyyy-MM-dd}",carga.Persona.fecha_nacimiento)"></td>
+                                            <td><input required class="form-control" type="text" placeholder="Monto" name="montocarga" value="@carga.monto_poliza"></td>
+                                            
+                                        </tr>
+                                    }
+
+
+                            </table>
+                        </div>
+
+                        <!-- Change this to a button or input when using this as a form -->
+
+                        <div class="col-lg-15">
+                            <input type="submit" class="btn btn-success" value="Registrar">
+                            <button type="reset" class="btn btn-danger">Cancelar</button>
+                        </div>
+                        <input type="hidden" name="numfilas" id="numfilas" value="0" />
+
+                    </fieldset>
+                </div>
+                <input type="hidden" name="numfilas" id="numfilas" value="@Model.usuario.Empleado.Cargas.Count()" />
             </form>
         </div>
 
