--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/Variables.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/Variables.cshtml
@@ -82,6 +82,17 @@
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <h4>Bono de Alimentación (UT)</h4>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-lg-4">
+                            <label for="porcsso">Valor</label>
+                            <input required id="porcsso" class="form-control" name="bonoalimentacion" type="text" autofocus value="@if (Model.configuracion != null) {@Model.configuracion.bonoalimentacion}" />
+                        </div>
+                    </div>
 
                     <div class="row">
                         <div class="col-lg-2">
