--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Templates/_TemplateIndex.cshtml
@@ -173,7 +173,19 @@
                         <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-alerts">
-                        <li>
+                        @foreach (var notif in Notificacion.GetAllNotificaciones(1))
+                        {
+                            <li>
+                                <a href="#">
+                                    <div>
+                                        <i class="fa fa-comment fa-fw"></i>@notif.titulo
+                                        <span class="pull-right text-muted small">@notif.f_enviado</span>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                        }
+                        <!--<li>
                             <a href="#">
                                 <div>
                                     <i class="fa fa-comment fa-fw"></i> New Comment
@@ -217,10 +229,10 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="divider"></li>
+                        <li class="divider"></li>-->
                         <li>
                             <a class="text-center" href="#">
-                                <strong>See All Alerts</strong>
+                                <strong>Ver Todas Las Notificaciones</strong>
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </li>
